--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=4238c6f54407e88fc1b30043e884c068",
-    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940"
+    "/js/app.js": "/js/app.js?id=ee14913852e26e92d28468ac4cc1815d",
+    "/js/manifest.js": "/js/manifest.js?id=106c280ec50960820cb755735dbf1215",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940",
+    "/js/vendor.js": "/js/vendor.js?id=7858b24dc94a2693c62911a2da9567fe"
 }
